fix layout alignements

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ a {
   position: relative;
   height: 30rem;
   max-width: 50rem;
-  margin: 2rem 0;
   perspective: 150rem;
   -moz-perspective: 150rem; }
   .card__side {
@@ -138,7 +137,7 @@ a {
     box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.1); }
   .skill__category {
     font-size: 2.4rem;
-    margin: 1rem auto; }
+    margin: 1rem 0; }
   .skill__item {
     display: flex;
     flex-wrap: wrap;
@@ -203,20 +202,21 @@ main {
 .about-info {
   display: flex;
   flex-direction: column;
-  font-size: 1.8rem; }
+  font-size: 1.8rem;
+  justify-content: center; }
   .about-info__jobs {
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(10rem, 70rem));
     justify-content: space-around; }
-  .about-info__short, .about-info__bio, .about-info__jobs--job {
+  .about-info__bio, .about-info__jobs--job {
     background: #515151;
     margin-top: 2rem;
     padding: 1rem;
     border-bottom: #eece1a 5px solid;
     box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.5);
     transition: all 0.5s; }
-    .about-info__short:hover, .about-info__bio:hover, .about-info__jobs--job:hover {
+    .about-info__bio:hover, .about-info__jobs--job:hover {
       box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.1); }
 
 .portfolio {
@@ -226,41 +226,9 @@ main {
   .portfolio .projects {
     width: 100%;
     display: grid;
-    grid-gap: 2rem;
+    grid-gap: 3rem;
     justify-content: space-around;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 50rem)); }
-
-.contact {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start; }
-  .contact__items {
-    width: 100%;
-    display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 30rem));
-    justify-content: space-between;
-    font-size: 2rem;
-    padding: 1.5rem 2.5rem;
-    transition: all 0.5s ease-out;
-    background: #515151;
-    margin-top: 1rem;
-    padding: 1rem;
-    border-bottom: #eece1a 5px solid;
-    box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.5); }
-    .contact__items:hover {
-      box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.1); }
-    .contact__items--link {
-      display: flex;
-      align-items: center; }
-    .contact__items--icon {
-      width: 3.2rem;
-      height: 3.2rem;
-      margin-right: 1.2rem;
-      fill: #00aff0;
-      transition: all 0.5s; }
-      .contact__items--icon:hover {
-        filter: invert(0.4); }
 
 .skills {
   display: flex;
@@ -271,6 +239,39 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center; }
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; }
+  .contact__items {
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 30rem));
+    padding: 1.5rem 2.5rem;
+    transition: all 0.5s ease-out;
+    background: #515151;
+    margin: 1rem auto;
+    border-bottom: #eece1a 5px solid;
+    box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.5); }
+    .contact__items:hover {
+      box-shadow: 0 1.5rem 1rem rgba(0, 0, 0, 0.1); }
+    .contact__items--link {
+      display: flex;
+      font-size: 2rem;
+      align-items: center; }
+      @media only screen and (max-width: 600px) {
+        .contact__items--link {
+          flex-direction: column;
+          font-size: 1.5rem; } }
+    .contact__items--icon {
+      width: 3.2rem;
+      height: 3.2rem;
+      margin-right: 1.2rem;
+      fill: #00aff0;
+      transition: all 0.5s; }
+      .contact__items--icon:hover {
+        filter: invert(0.4); }
 
 footer {
   height: 6rem;
