--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -2,7 +2,6 @@
   position: relative;
   height: 30rem;
   max-width: 50rem;
-  margin: 2rem 0;
   perspective: 150rem;
   -moz-perspective: 150rem;
 
