--- a/scss/components/_skill.scss
+++ b/scss/components/_skill.scss
@@ -14,7 +14,7 @@
 
   &__category {
     font-size: 2.4rem;
-    margin: 1rem auto;
+    margin: 1rem 0;
   }
 
   &__item {
