--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -54,6 +54,7 @@ main {
     display: flex;
     flex-direction: column;
     font-size: 1.8rem;
+    justify-content: center;
 
     &__jobs {
       display: grid;
@@ -62,7 +63,6 @@ main {
       justify-content: space-around;
     }
 
-    &__short,
     &__bio,
     &__jobs--job {
       background: lighten($primary-color, 5);
@@ -85,51 +85,9 @@ main {
   & .projects {
     width: 100%;
     display: grid;
-    grid-gap: 2rem;
+    grid-gap: 3rem;
     justify-content: space-around;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 50rem));
-  }
-}
-
-.contact {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  &__items {
-    width: 100%;
-    display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 30rem));
-    justify-content: space-between;
-    font-size: 2rem;
-    padding: 1.5rem 2.5rem;
-    transition: all 0.5s ease-out;
-
-    background: lighten($primary-color, 5);
-    margin-top: 1rem;
-    padding: 1rem;
-    border-bottom: $secondary-color 5px solid;
-    box-shadow: 0 1.5rem 1rem rgba(black, 0.5);
-    &:hover {
-      box-shadow: 0 1.5rem 1rem rgba(black, 0.1);
-    }
-
-    &--link {
-      display: flex;
-      align-items: center;
-    }
-
-    &--icon {
-      width: 3.2rem;
-      height: 3.2rem;
-      margin-right: 1.2rem;
-      fill: #00aff0;
-      transition: all 0.5s;
-      &:hover {
-        filter: invert(0.4);
-      }
-    }
   }
 }
 
@@ -143,6 +101,49 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  &__items {
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 30rem));
+    padding: 1.5rem 2.5rem;
+    transition: all 0.5s ease-out;
+
+    background: lighten($primary-color, 5);
+    margin: 1rem auto;
+    border-bottom: $secondary-color 5px solid;
+    box-shadow: 0 1.5rem 1rem rgba(black, 0.5);
+    &:hover {
+      box-shadow: 0 1.5rem 1rem rgba(black, 0.1);
+    }
+
+    &--link {
+      display: flex;
+      font-size: 2rem;
+      @media only screen and (max-width: 600px) {
+        flex-direction: column;
+        font-size: 1.5rem;
+      }
+      align-items: center;
+    }
+
+    &--icon {
+      width: 3.2rem;
+      height: 3.2rem;
+      margin-right: 1.2rem;
+      fill: #00aff0;
+      transition: all 0.5s;
+      &:hover {
+        filter: invert(0.4);
+      }
+    }
   }
 }
 
